Add DroidFish icon + ComponentInfos, BPI icons tweaking

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -159,6 +159,7 @@
 	<item component="ComponentInfo{air.com.RustyLake.CubeEscapeTheMill/air.com.RustyLake.CubeEscapeTheMill.AppEntry}" drawable="cube_escape_the_mill" />
 	<item component="ComponentInfo{air.com.RustyLake.CubeEscapeTheatre/air.com.RustyLake.CubeEscapeTheatre.AppEntry}" drawable="cube_escape_theatre" />
 	<item component="ComponentInfo{air.com.adobe.connectpro/air.com.adobe.connectpro.AppEntry}" drawable="adobe_connect_classic" />
+	<item component="ComponentInfo{com.adobe.connect.android.mobile/com.adobe.connect.android.mobile.view.homepage.SplashScreenActivity}" drawable="adobe_connect_classic" />
 	<item component="ComponentInfo{air.com.adobe.pstouchphone/air.com.adobe.pstouchphone.AppEntry}" drawable="adobe_ps_touch" />
 	<item component="ComponentInfo{air.com.amanitadesign.chuchel.gp/air.com.amanitadesign.chuchel.gp.AIRAppEntry}" drawable="chuchel" />
 	<item component="ComponentInfo{air.com.bartbonte.black/air.com.bartbonte.black.AppEntry}" drawable="bartbonte_black" />
@@ -1853,6 +1854,7 @@
 	<item component="ComponentInfo{com.arandompackage.flatconsgreen/com.arandompackage.flatconsgreen.MainActivity}" drawable="leaf" />
 	<item component="ComponentInfo{com.aranoah.healthkart.plus/com.aranoah.healthkart.plus.startup.splash.SplashActivity}" drawable="tata_1mg" />
 	<item component="ComponentInfo{com.aratai.chat/com.arattai.home.presentation.ui.HomeActivity}" drawable="arattai" />
+	<item component="ComponentInfo{com.arbys.android.arbysapp/com.inspirebrandsapp.MainActivity}" drawable="arbys" />
 	<item component="ComponentInfo{com.arbys.android.arbysapp/com.mobileforming.android.arbys.SplashActivity}" drawable="arbys" />
 	<item component="ComponentInfo{com.area120.grasshopper/com.area120.grasshopper.MainActivity}" drawable="grasshopper" />
 	<item component="ComponentInfo{com.area120.paperwork/com.google.area120.paperwork.android.main.MainActivity}" drawable="stack_pdf_scanner" />
@@ -2477,9 +2479,10 @@
 	<item component="ComponentInfo{com.boxcryptor2.android/com.boxcryptor.android.ui.mvvm.presession.PreSessionActivity}" drawable="boxcryptor" />
 	<item component="ComponentInfo{com.boxer.calendar/com.android.calendar.AllInOneActivity}" drawable="today_calendar" />
 	<item component="ComponentInfo{com.boxer.email/com.boxer.email.activity.Welcome}" drawable="boxer" />
-	<item component="ComponentInfo{com.bpi.ng.app/com.bpi.ng.app.presentation.views.MainActivity}" drawable="bank_of_the_philippine" />
+	<item component="ComponentInfo{com.bpi.ng.app/com.bpi.ng.app.presentation.views.MainActivity}" drawable="bpi" />
+	<item component="ComponentInfo{com.bpi.ng.app/g1a4490db.vee1c031b.ng.u536405b8.o40f46da4.cfc3fd49b.x4317faeb}" drawable="bpi" />
 	<item component="ComponentInfo{com.bpi.ng.app/i2e8db294.ifa65f50a.ng.o0f244477.w350f86b3.ff4d43a5e.n60027627}" drawable="bpi" />
-	<item component="ComponentInfo{com.bpi.ng.mobilebanking/com.bpi.ng.mobilebanking.view.activity.MainActivity}" drawable="bpi_mobile" />
+	<item component="ComponentInfo{com.bpi.ng.mobilebanking/com.bpi.ng.mobilebanking.view.activity.MainActivity}" drawable="bpi" />
 	<item component="ComponentInfo{com.bpmhealth.boostcamp/com.bpmhealth.boostcamp.MainActivity}" drawable="boostcamp" />
 	<item component="ComponentInfo{com.bq.camerabq/com.bq.camera3.common.MainActivity}" drawable="camera" />
 	<item component="ComponentInfo{com.bq.soundrecorder/com.bq.soundrecorder.activities.MainActivity}" drawable="sound_recorder" />
@@ -2866,6 +2869,7 @@
 	<item component="ComponentInfo{com.clubhouse.app/com.clubhouse.android.ui.ClubhouseActivity}" drawable="clubhouse" />
 	<item component="ComponentInfo{com.clubwalrus/com.clubwalrus.ui.splash.SplashActivity}" drawable="walrus" />
 	<item component="ComponentInfo{com.clue.android/com.biowink.clue.splash.SplashActivity}" drawable="clue" />
+	<item component="ComponentInfo{com.clue.android/com.helloclue.ui.MainActivity}" drawable="clue" />
 	<item component="ComponentInfo{com.clusterdev.tamilkeyboard/com.example.android.softkeyboard.Activities.EasyConfig}" drawable="tamil_keyboard" />
 	<item component="ComponentInfo{com.cm_prod.bad/com.e_i.bad.controls.activities.StartActivity}" drawable="credit_mutuel" />
 	<item component="ComponentInfo{com.cmcm.lite/com.cleanmaster.function.main.MiniSplashActivity}" drawable="cleanmaster" />
@@ -3373,6 +3377,7 @@
 	<item component="ComponentInfo{com.discoverfinancial.mobile/com.discoverfinancial.mobile.MainActivity}" drawable="discover_mobile" />
 	<item component="ComponentInfo{com.discoverfinancial.mobile/d035d0888.ya2f1658d.y06c2b683.y7788d52d}" drawable="discover_mobile" />
 	<item component="ComponentInfo{com.discoverfinancial.mobile/e1ce8e836.d7cb5293c.n030d71e4.h7df695af}" drawable="discover_mobile" />
+	<item component="ComponentInfo{com.discoverfinancial.mobile/k3cb90798.i6a35deaa.wc4d761c3.w863f7ded}" drawable="discover_mobile" />
 	<item component="ComponentInfo{com.discoverfinancial.mobile/lf0af873a.e37dcd7f3.a55198c2f.x72a99b04}" drawable="discover_mobile" />
 	<item component="ComponentInfo{com.discoverfinancial.mobile/o585a5bf3.i5c79ac68.x90bdcc16.tc9e242e4}" drawable="discover_mobile" />
 	<item component="ComponentInfo{com.discoverfinancial.mobile/pf541ae78.wa3b13fd1.e7dfda19d.o4531864c}" drawable="discover_mobile" />
@@ -5206,6 +5211,7 @@
 	<item component="ComponentInfo{com.ideacellular.myidea/com.ideacellular.myidea.MainActivity}" drawable="my_idea" />
 	<item component="ComponentInfo{com.ideacellular.myidea/com.ideacellular.myidea.SplashScreen}" drawable="my_idea" />
 	<item component="ComponentInfo{com.ideashower.readitlater.pro/com.ideashower.readitlater.activity.AppCacheCheckActivity}" drawable="pocket" />
+	<item component="ComponentInfo{com.ideashower.readitlater.pro/com.pocket.app.ClassicLogoActivity}" drawable="pocket" />
 	<item component="ComponentInfo{com.ideenexpo.ideenexpoApp/com.ideenexpo.ideenexpoApp.MainActivity}" drawable="ideenexpo" />
 	<item component="ComponentInfo{com.ideomobile.hapoalim/com.ideomobile.hapoalim.features.auth.splash.SplashActivity}" drawable="hapoalim_bank" />
 	<item component="ComponentInfo{com.idfcfirstbank.optimus/com.idfcfirstbank.optimus.MainActivity}" drawable="bank" />
@@ -5520,6 +5526,7 @@
 	<item component="ComponentInfo{com.jhelum.gyawun/com.ryanheise.audioservice.AudioServiceActivity}" drawable="gyawun" />
 	<item component="ComponentInfo{com.jiaqifeng.hacki/com.jiaqifeng.hacki.MainActivity}" drawable="hacki" />
 	<item component="ComponentInfo{com.jimber.workit/com.jimber.workit.SplashActivity}" drawable="workit" />
+	<item component="ComponentInfo{com.jio.jioplay.tv/com.jio.jioplay.tv.AppLogo}" drawable="jiotv" />
 	<item component="ComponentInfo{com.jio.jioplay.tv/com.jio.media.tv.ui.permission_onboarding.PermissionActivity}" drawable="jiotv" />
 	<item component="ComponentInfo{com.jio.join/com.witsoftware.wmc.SplashScreenActivity}" drawable="jio_voice" />
 	<item component="ComponentInfo{com.jio.join/com.witsoftware.wmc.application.ui.SplashScreenActivity}" drawable="jio_voice" />
@@ -10460,6 +10467,7 @@
 	<item component="ComponentInfo{com.uphold.wallet/com.uphold.wallet.SplashActivity}" drawable="uphold" />
 	<item component="ComponentInfo{com.uplexa.upxwallet/com.uplexa.upxwallet.LoginActivity}" drawable="crypto" />
 	<item component="ComponentInfo{com.upmc.enterprises.myupmc/com.upmc.enterprises.myupmc.LaunchActivity}" drawable="my_upmc" />
+	<item component="ComponentInfo{com.ups.mobile.android/com.ups.mobile.android.MainActivity}" drawable="ups" />
 	<item component="ComponentInfo{com.ups.mobile.android/crc6466778ac8e5630834.SplashActivity}" drawable="ups" />
 	<item component="ComponentInfo{com.upside.consumer.android/com.upside.consumer.android.activities.MainActivity}" drawable="upside" />
 	<item component="ComponentInfo{com.upskew.encode/com.upskew.encode.signin.SignInActivity}" drawable="encode" />
@@ -10782,6 +10790,7 @@
 	<item component="ComponentInfo{com.wendys.nutritiontool/com.wendys.nutritiontool.MainActivity}" drawable="wendys" />
 	<item component="ComponentInfo{com.weplaydots.dotsclassic/com.weplaydots.dotsclassic.DotsClassicActivity}" drawable="dots" />
 	<item component="ComponentInfo{com.weplaydots.twodotsandroid/com.weplaydots.twodots.TwoDotsActivity}" drawable="two_dots" />
+	<item component="ComponentInfo{com.weplaydots.twodotsandroid/es.socialpoint.sparta.base.SpartaActivity}" drawable="two_dots" />
 	<item component="ComponentInfo{com.werewolfapps.online/com.werewolfapps.online.MainActivity}" drawable="wolvesville" />
 	<item component="ComponentInfo{com.wesaphzt.privatelocation/com.wesaphzt.privatelocation.MainActivity}" drawable="private_location" />
 	<item component="ComponentInfo{com.westalabamabank.mobile/nz.co.wc593afed.q43d2f697.habda356d.wc7c30f75}" drawable="bank" />
@@ -11339,6 +11348,7 @@
 	<item component="ComponentInfo{de.blinkt.openvpn/de.blinkt.openvpn.activities.MainActivity}" drawable="openvpn_for_android" />
 	<item component="ComponentInfo{de.blitzer.plus/de.blitzer.activity.SplashScreen}" drawable="blitzer_de" />
 	<item component="ComponentInfo{de.blitzer/de.blitzer.activity.SplashScreen}" drawable="blitzer_de" />
+	<item component="ComponentInfo{de.bmw.connected.mobile20.na/com.mobileconnected.MainActivity}" drawable="bmw_connected" />
 	<item component="ComponentInfo{de.bmw.connected.mobile20.row/com.mobileconnected.MainActivity}" drawable="bmw_connected" />
 	<item component="ComponentInfo{de.bmw.connected.na/de.bmw.connected.lib.startup.views.StartupActivity}" drawable="bmw_connected" />
 	<item component="ComponentInfo{de.boxine.tonieapp/de.boxine.tonieapp.SplashActivity}" drawable="tonies" />
@@ -12304,6 +12314,7 @@
 	<item component="ComponentInfo{in.org.npci.upiapp/ikua.D}" drawable="bhim" />
 	<item component="ComponentInfo{in.org.npci.upiapp/in.org.npci.upiapp.HomeActivity}" drawable="bhim" />
 	<item component="ComponentInfo{in.org.npci.upiapp/mpacjhvlt.n}" drawable="bhim" />
+	<item component="ComponentInfo{in.org.npci.upiapp/uuqkxbixh.J}" drawable="bhim" />
 	<item component="ComponentInfo{in.plackal.lovecyclesfree/in.plackal.lovecyclesfree.activity.SplashActivity}" drawable="maya" />
 	<item component="ComponentInfo{in.redbus.android/in.redbus.android.root.SplashScreen}" drawable="redbus" />
 	<item component="ComponentInfo{in.shabinder.soundbound/in.shabinder.soundbound.MainActivity}" drawable="soundbound" />
@@ -13027,6 +13038,7 @@
 	<item component="ComponentInfo{mermaid.launcher.theme.ddt/mermaid.launcher.theme.ddt.activities.SplashActivity}" drawable="mermaid_icon" />
 	<item component="ComponentInfo{meteor.test.and.grade.internet.connection.speed/meteor.test.and.grade.internet.connection.speed.activities.WelcomeActivity}" drawable="meteor" />
 	<item component="ComponentInfo{metro.mobile/com.appcom.metro.feature.StartupActivity}" drawable="mon_metro" />
+	<item component="ComponentInfo{metro.mobile/crc64d984a079faa401a6.MainActivity}" drawable="mon_metro" />
 	<item component="ComponentInfo{mf.asciitext.lite/mf.irregex.SplashScreen}" drawable="irregular_expressions" />
 	<item component="ComponentInfo{minimalistforkwgt.kustom.pack/org.kustom.api.dashboard.DashboardActivity}" drawable="mini_ism_kwgt" />
 	<item component="ComponentInfo{ml.docilealligator.infinityforreddit.patreon/ml.docilealligator.infinityforreddit.activities.MainActivity}" drawable="infinity" />
@@ -14298,7 +14310,7 @@
 	<item component="ComponentInfo{prototype.xd.scheduler/prototype.xd.scheduler.MainActivity}" drawable="scheduler" />
 	<item component="ComponentInfo{psplay.grill.com/com.grill.psplay.MainActivity}" drawable="psplay" />
 	<item component="ComponentInfo{pt.ama.autenticacaogov/crc64525e08dfc6127ccb.MainActivity}" drawable="autenticacao_gov" />
-	<item component="ComponentInfo{pt.bancobpi.mobile.fiabilizacao/outsystems.experts.OtherMainActivity}" drawable="bpi" />
+	<item component="ComponentInfo{pt.bancobpi.mobile.fiabilizacao/outsystems.experts.OtherMainActivity}" drawable="bpi_app" />
 	<item component="ComponentInfo{pt.beware.myrne/pt.beware.myrne.MainActivity}" drawable="myrne" />
 	<item component="ComponentInfo{pt.carris.tecmic/md544bae1e541e95037873c54c401f5c006.SplashActivity}" drawable="carris" />
 	<item component="ComponentInfo{pt.cgd.caixadirecta/pt.cgd.caixadirecta.SplashActivity}" drawable="caixadirecta" />
