--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -85,6 +85,7 @@
 	<item drawable="booking_com_alt_1" />
 	<item drawable="bookmate_alt_1" />
 	<item drawable="bouncer_alt_1" />
+	<item drawable="bpi_alt_1" />
 	<item drawable="bradesco_alt_1" />
 	<item drawable="breezy_weather_alt_1" />
 	<item drawable="brilliant_alt_1" />
@@ -2971,7 +2972,6 @@
 	<item drawable="bank_of_america" />
 	<item drawable="bank_of_maldives" />
 	<item drawable="bank_of_melbourne" />
-	<item drawable="bank_of_the_philippine" />
 	<item drawable="banki_ru" />
 	<item drawable="bankid" />
 	<item drawable="bankingfour" />
@@ -3332,7 +3332,7 @@
 	<item drawable="boxtogo" />
 	<item drawable="bp_doctor_plus" />
 	<item drawable="bpi" />
-	<item drawable="bpi_mobile" />
+	<item drawable="bpi_app" />
 	<item drawable="bq_care" />
 	<item drawable="bq_on" />
 	<item drawable="bradesco" />
