feat: add contributor

--- a/app/src/main/res/xml/contributors.xml
+++ b/app/src/main/res/xml/contributors.xml
@@ -395,4 +395,9 @@
         contribution="Icon"
         image=""
         link="https://github.com/Tmist3r" />
+    <contributor
+        name="Kre0lidge"
+        contribution="Icons"
+        image="https://avatars.githubusercontent.com/u/149087292"
+        link="https://github.com/Cirkutry" />
 </resources>
