Restore previous Owly icon as Alt

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -49,6 +49,7 @@
 	<item drawable="notallyx" />
 	<item drawable="ntes" />
 	<item drawable="oplati" />
+	<item drawable="owly" />
 	<item drawable="pillo" />
 	<item drawable="pixel_thermometer" />
 	<item drawable="pokemon_tgc_pocket" />
@@ -766,6 +767,7 @@
 	<item drawable="orgzly_alt_1" />
 	<item drawable="otomoto_alt_1" />
 	<item drawable="outline_alt_1" />
+	<item drawable="owly_alt_1" />
 	<item drawable="panera_bread_alt_1" />
 	<item drawable="passwordstore_alt_1" />
 	<item drawable="patreon_alt_1" />
