--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -11,6 +11,7 @@
 	<item drawable="amazon_chime" />
 	<item drawable="ankipro" />
 	<item drawable="auto_typer" />
+	<item drawable="bergfex" />
 	<item drawable="brain_fm" />
 	<item drawable="brother_print_service" />
 	<item drawable="canada_life" />
@@ -145,6 +146,7 @@
 	<item drawable="bbc_sounds_alt_1" />
 	<item drawable="bbc_sport_alt_1" />
 	<item drawable="bbc_weather_alt_1" />
+	<item drawable="bergfex_alt_1" />
 	<item drawable="bilibili_alt_1" />
 	<item drawable="binance_alt_1" />
 	<item drawable="binary_eye_alt_1" />
