--- a/app/src/main/res/xml/contributors.xml
+++ b/app/src/main/res/xml/contributors.xml
@@ -400,4 +400,9 @@
         contribution="Icons"
         image="https://avatars.githubusercontent.com/u/149087292"
         link="https://github.com/Cirkutry" />
+    <contributor
+        name="sleepylonganisa"
+        contribution="Icons"
+        image=""
+        link="https://github.com/sleepylonganisa" />    
 </resources>
