Update Google Pay for Business icon

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -2217,9 +2217,9 @@
 	<item component="ComponentInfo{com.bbm/com.bbm.ui.activities.StartupActivity-Delapan}" drawable="bbm" />
 	<item component="ComponentInfo{com.bbm/com.bbm.ui.activities.StartupActivity}" drawable="bbm" />
 	<item component="ComponentInfo{com.bbmykdev1/com.bbmykdev1.ui.activities.StartupActivity}" drawable="bbm" />
-	<item component="ComponentInfo{com.bbva.bbvacontigo/com.bbva.buzz.modules.startup.StartActivity}" drawable="bank" />
+	<item component="ComponentInfo{com.bbva.bbvacontigo/com.bbva.buzz.modules.startup.StartActivity}" drawable="bbva" />
 	<item component="ComponentInfo{com.bbva.bbvacontigo/com.bbva.woody.app.modules.initial.splash.view.SplashActivity}" drawable="bbva" />
-	<item component="ComponentInfo{com.bbva.bbvacontigo/com.bbva.woody.phone.modules.initial.splash.view.SplashActivity}" drawable="bank" />
+	<item component="ComponentInfo{com.bbva.bbvacontigo/com.bbva.woody.phone.modules.initial.splash.view.SplashActivity}" drawable="bbva" />
 	<item component="ComponentInfo{com.bbva.compassBuzz/com.bbva.compassBuzz.modules.initialization.StartActivity}" drawable="bbva" />
 	<item component="ComponentInfo{com.bbva.italy/com.bbva.woody.app.modules.initial.splash.view.SplashActivity}" drawable="bbva" />
 	<item component="ComponentInfo{com.bbva.nxt_argentina/com.bbva.glomohybrid.splash.presentation.view.SplashActivity}" drawable="bbva" />
@@ -2493,8 +2493,8 @@
 	<item component="ComponentInfo{com.bose.corporation.bosesleep/com.bose.corporation.bosesleep.screens.search.splash.SplashActivity}" drawable="bosesleep" />
 	<item component="ComponentInfo{com.bose.monet/com.bose.monet.activity.discovery.SplashSearchingActivity}" drawable="boseconnect" />
 	<item component="ComponentInfo{com.boursorama.android.clients/android.app.src.main.kotlin.com.boursorama.android.clients.MainActivity}" drawable="boursobank" />
-	<item component="ComponentInfo{com.boursorama.android.clients/com.boursorama.android.clients.app.splash.SplashActivity_}" drawable="bank" />
-	<item component="ComponentInfo{com.boursorama.android.clients/com.boursorama.android.clients.splash.SplashActivity}" drawable="bank" />
+	<item component="ComponentInfo{com.boursorama.android.clients/com.boursorama.android.clients.app.splash.SplashActivity_}" drawable="boursobank" />
+	<item component="ComponentInfo{com.boursorama.android.clients/com.boursorama.android.clients.splash.SplashActivity}" drawable="boursobank" />
 	<item component="ComponentInfo{com.box.android/com.box.android.activities.login.SplashScreenActivity}" drawable="box" />
 	<item component="ComponentInfo{com.box.project.recording_app/com.box.project.recording_app.MainActivity}" drawable="recording_webcam" />
 	<item component="ComponentInfo{com.boxcryptor2.android/boxcryptor.legacy.mvvm.presession.PreSessionActivity}" drawable="boxcryptor" />
@@ -2567,7 +2567,7 @@
 	<item component="ComponentInfo{com.bt.bms/com.movie.bms.splashscreen.SplashScreenActivity}" drawable="bookmyshow" />
 	<item component="ComponentInfo{com.bt.btsport/com.bt.tve.otg.StartupActivity}" drawable="bt_sport" />
 	<item component="ComponentInfo{com.btechapp/com.btechapp.presentation.ui.splash.SplashActivity}" drawable="btech" />
-	<item component="ComponentInfo{com.btg.pactual.banking/com.btg.pactual.banking.banking_login.presentation.BankingLoginActivity}" drawable="bank" />
+	<item component="ComponentInfo{com.btg.pactual.banking/com.btg.pactual.banking.banking_login.presentation.BankingLoginActivity}" drawable="btg" />
 	<item component="ComponentInfo{com.btg.pactual.digital.mobile/com.btg.pactual.digital.login.LoginActivity}" drawable="btg" />
 	<item component="ComponentInfo{com.btpn.dc/com.jenius2.MainActivity}" drawable="jenius" />
 	<item component="ComponentInfo{com.buak.Link2SD/com.buak.Link2SD.Link2SD}" drawable="link_to_sd" />
@@ -2842,7 +2842,7 @@
 	<item component="ComponentInfo{com.citi.citimobile/com.citi.mobile.pt3.GlobalPhoneActivity}" drawable="citi" />
 	<item component="ComponentInfo{com.citibanamex.banamexmobile/com.citibanamex.banamexmobile.splashscreen.presentation.view.SplashActivity}" drawable="citi" />
 	<item component="ComponentInfo{com.citibanamex.banamexmobile/com.citibanamex.banamexmobile.views.init.SplashActivity}" drawable="citi" />
-	<item component="ComponentInfo{com.citibank.CitibankMY/com.citi.mobile.pt3.starter.authentication.view.activity.LoginActivity}" drawable="bank" />
+	<item component="ComponentInfo{com.citibank.CitibankMY/com.citi.mobile.pt3.starter.authentication.view.activity.LoginActivity}" drawable="citi" />
 	<item component="ComponentInfo{com.citibank.mobile.au/com.citi.mobile.pt3.GlobalPhoneActivity}" drawable="citi" />
 	<item component="ComponentInfo{com.citiuat/com.citiuat.mobeix.MainActivity}" drawable="citi" />
 	<item component="ComponentInfo{com.citiuat/com.citiuat.mobeix}" drawable="citi" />
@@ -3103,7 +3103,7 @@
 	<item component="ComponentInfo{com.crypter.cryptocyrrency/com.crypter.cryptocyrrency.SplashActivity}" drawable="crypto" />
 	<item component="ComponentInfo{com.crypto.multiwallet/com.crypto.multiwallet.MainActivity}" drawable="guarda" />
 	<item component="ComponentInfo{com.cryptopanic.android/com.cryptopanic.android.SplashActivity}" drawable="crypto" />
-	<item component="ComponentInfo{com.csam.icici.bank.imobile/com.csam.icici.bank.imobile.IMOBILE}" drawable="bank" />
+	<item component="ComponentInfo{com.csam.icici.bank.imobile/com.csam.icici.bank.imobile.IMOBILE}" drawable="imobile_pay" />
 	<item component="ComponentInfo{com.csam.icici.bank.imobile/com.csam.icici.bank.imobile.launcher_be5fee416d17a4d4bdcf67199a9cbb9893a784e44dbdba19087c3db5e1e61f81}" drawable="imobile_pay" />
 	<item component="ComponentInfo{com.csdroid.pkg/com.csdroid.pkg.MainActivity}" drawable="package_name_viewer_2_0" />
 	<item component="ComponentInfo{com.csmoneymobile/com.csmoneymobile.MainActivity}" drawable="cs_money" />
@@ -4662,7 +4662,7 @@
 	<item component="ComponentInfo{com.google.android.apps.messaging/com.google.android.apps.messaging.ui.ConversationListActivity}" drawable="sms_alt_3" />
 	<item component="ComponentInfo{com.google.android.apps.motionstills/com.google.android.apps.motionstills.SplashActivity}" drawable="motion_stills" />
 	<item component="ComponentInfo{com.google.android.apps.nbu.files/com.google.android.apps.nbu.files.home.HomeActivity}" drawable="google_files" />
-	<item component="ComponentInfo{com.google.android.apps.nbu.paisa.merchant/com.google.android.apps.nbu.paisa.merchant.launcher.MerchantLauncherActivity}" drawable="gpay_business" />
+	<item component="ComponentInfo{com.google.android.apps.nbu.paisa.merchant/com.google.android.apps.nbu.paisa.merchant.launcher.MerchantLauncherActivity}" drawable="google_pay_for_business" />
 	<item component="ComponentInfo{com.google.android.apps.nbu.paisa.user/com.google.android.apps.nbu.paisa.user.launcher.LauncherActivity}" drawable="google_pay_alt_1" />
 	<item component="ComponentInfo{com.google.android.apps.nbu.paisa.user/com.google.nbu.paisa.flutter.gpay.app.LauncherActivity}" drawable="google_pay_alt_1" />
 	<item component="ComponentInfo{com.google.android.apps.nbu.paisa.user/com.google.nbu.paisa.flutter.gpay.app.MainActivity}" drawable="google_pay_alt_1" />
@@ -9807,7 +9807,7 @@
 	<item component="ComponentInfo{com.tct.weather/com.tct.weather.MainActivity}" drawable="weather" />
 	<item component="ComponentInfo{com.td.insurance/com.td.insurance.activities.view.SplashActivity}" drawable="td_bank" />
 	<item component="ComponentInfo{com.td.mbna/com.td.mbna.splash.SplashActivity}" drawable="mbna" />
-	<item component="ComponentInfo{com.td/com.td.mobile.controllers.StartupActivity}" drawable="bank" />
+	<item component="ComponentInfo{com.td/com.td.mobile.controllers.StartupActivity}" drawable="td_bank" />
 	<item component="ComponentInfo{com.tdameritrade.mobile3/com.tdameritrade.mobile3.activities.HomeActivity}" drawable="td_ameritrade" />
 	<item component="ComponentInfo{com.tdbank/com.td.dcts.android.us.app.MainActivity}" drawable="td_bank" />
 	<item component="ComponentInfo{com.tdbank/com.td.dcts.android.us.app.SplashScreenActivity}" drawable="td_bank" />
