--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -28,6 +28,7 @@
 	<item drawable="feeld_dating" />
 	<item drawable="fluidac" />
 	<item drawable="german_dictionary_alt_1" />
+	<item drawable="google_pay_for_business" />
 	<item drawable="grab" />
 	<item drawable="habits_streak" />
 	<item drawable="hamburger" />
@@ -555,6 +556,7 @@
 	<item drawable="google_maps_alt_1" />
 	<item drawable="google_meet_alt_1" />
 	<item drawable="google_pay_alt_1" />
+	<item drawable="google_pay_for_business_alt_1" />
 	<item drawable="google_photos_alt_1" />
 	<item drawable="google_photos_alt_2" />
 	<item drawable="google_photos_alt_3" />
@@ -1970,6 +1972,7 @@
 	<item drawable="google_one" />
 	<item drawable="google_opinion_rewards" />
 	<item drawable="google_pay" />
+	<item drawable="google_pay_for_business" />
 	<item drawable="google_phone" />
 	<item drawable="google_photos" />
 	<item drawable="google_photoscan" />
@@ -5456,7 +5459,6 @@
 	<item drawable="gov_br" />
 	<item drawable="gov_br_alt_1" />
 	<item drawable="govee_home" />
-	<item drawable="gpay_business" />
 	<item drawable="gps_joystick" />
 	<item drawable="gps_locker" />
 	<item drawable="gps_logger" />
