Add Zomato Restaurant Parner and Coupang icons + Fixes

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -100,6 +100,7 @@
 	<item drawable="ai_dungeon_alt_1" />
 	<item drawable="aim_alt_1" />
 	<item drawable="airtel_alt_1" />
+	<item drawable="al_chan_alt_1" />
 	<item drawable="all__trails_alt_1" />
 	<item drawable="alto_alt_1" />
 	<item drawable="amazon_alexa_alt_1" />
@@ -258,6 +259,7 @@
 	<item drawable="fampay_alt_1" />
 	<item drawable="fancade_alt_1" />
 	<item drawable="fastic_alt_1" />
+	<item drawable="feeld_alt_1" />
 	<item drawable="file_manager_alt_1" />
 	<item drawable="firefox_alt_1" />
 	<item drawable="firefox_alt_2" />
@@ -572,6 +574,7 @@
 	<item drawable="google_wallet_alt_1" />
 	<item drawable="gosuslugi_alt_1" />
 	<item drawable="grab_alt_1" />
+	<item drawable="grammarly_alt_1" />
 	<item drawable="gramophone_alt_1" />
 	<item drawable="gramophone_alt_2" />
 	<item drawable="gsam_battery_monitor_alt_1" />
@@ -694,6 +697,7 @@
 	<item drawable="minecraft_alt_1" />
 	<item drawable="minecraft_alt_2" />
 	<item drawable="minerals_guide_plus_identifier_alt_1" />
+	<item drawable="minimalist_pomodoro_timer_alt_1" />
 	<item drawable="mj_pdf_reader_alt_1" />
 	<item drawable="mlauncher_alt_1" />
 	<item drawable="moelist_alt_1" />
@@ -701,6 +705,7 @@
 	<item drawable="moshidon_nightly_alt_1" />
 	<item drawable="mulch_alt_1" />
 	<item drawable="mull_alt_1" />
+	<item drawable="multi_calculator_alt_1" />
 	<item drawable="mupdf_alt_1" />
 	<item drawable="mupdf_alt_2" />
 	<item drawable="music_alt_1" />
@@ -725,6 +730,7 @@
 	<item drawable="nagram_neon" />
 	<item drawable="nagram_niello" />
 	<item drawable="nationwide_alt_1" />
+	<item drawable="naver_webtoon_alt_1" />
 	<item drawable="nbc_alt_1" />
 	<item drawable="neko_alt_1" />
 	<item drawable="neko_alt_2" />
@@ -757,6 +763,7 @@
 	<item drawable="noto_purpleberry" />
 	<item drawable="noto_sanguinesun" />
 	<item drawable="nubank_alt_1" />
+	<item drawable="nvidia_geforce_now_alt_1" />
 	<item drawable="obsidian_alt_1" />
 	<item drawable="oled_buddy_alt_1" />
 	<item drawable="olive_young_alt_1" />
@@ -767,6 +774,7 @@
 	<item drawable="openboard_alt_1" />
 	<item drawable="openfoodfacts_alt_1" />
 	<item drawable="openreads_alt_1" />
+	<item drawable="openvpn_connect_alt_1" />
 	<item drawable="organic_maps_alt_1" />
 	<item drawable="orgzly_alt_1" />
 	<item drawable="otomoto_alt_1" />
@@ -817,6 +825,7 @@
 	<item drawable="poe_alt_1" />
 	<item drawable="polar_flow_alt_1" />
 	<item drawable="portal_valve_alt_1" />
+	<item drawable="poste_italiane_alt_1" />
 	<item drawable="powerup_alt_1" />
 	<item drawable="ppsspp_alt_1" />
 	<item drawable="procam_x_alt_1" />
@@ -2425,7 +2434,6 @@
 	<item drawable="albert_heijn" />
 	<item drawable="albertsons" />
 	<item drawable="albion_online" />
-	<item drawable="alchan" />
 	<item drawable="alchemy_stars" />
 	<item drawable="aldi_life_musik" />
 	<item drawable="aldi_talk" />
@@ -4927,7 +4935,6 @@
 	<item drawable="feedme" />
 	<item drawable="feeel" />
 	<item drawable="feeld" />
-	<item drawable="feeld_dating" />
 	<item drawable="feem" />
 	<item drawable="feit_electric" />
 	<item drawable="feltrinelli" />
@@ -5326,7 +5333,6 @@
 	<item drawable="geeni" />
 	<item drawable="geergit" />
 	<item drawable="geev" />
-	<item drawable="geforce_now" />
 	<item drawable="geico" />
 	<item drawable="geizhals" />
 	<item drawable="gello" />
@@ -5438,7 +5444,6 @@
 	<item drawable="goodlife_fitness" />
 	<item drawable="goodnotes" />
 	<item drawable="goodreads" />
-	<item drawable="goodtime_productivity" />
 	<item drawable="google_icons" />
 	<item drawable="google_pixel_studio" />
 	<item drawable="goosechase" />
@@ -5478,7 +5483,6 @@
 	<item drawable="gradeway" />
 	<item drawable="gradient_wallpaper_maker" />
 	<item drawable="grammarly" />
-	<item drawable="grammarly_ai_assistant" />
 	<item drawable="gramophone" />
 	<item drawable="granny_smith" />
 	<item drawable="graph_messenger" />
@@ -7126,6 +7130,7 @@
 	<item drawable="minimalist" />
 	<item drawable="minimalist_icon_pack" />
 	<item drawable="minimalist_music_player" />
+	<item drawable="minimalist_pomodoro_timer" />
 	<item drawable="minimalistic_text" />
 	<item drawable="minimo_kwgt" />
 	<item drawable="minion_rush" />
@@ -7322,7 +7327,6 @@
 	<item drawable="mull" />
 	<item drawable="mullvad_vpn" />
 	<item drawable="multi_calculator" />
-	<item drawable="multicalculator" />
 	<item drawable="multiling_o_keyboard" />
 	<item drawable="multilocale" />
 	<item drawable="multivnc" />
@@ -8040,7 +8044,6 @@
 	<item drawable="opentracks" />
 	<item drawable="openttd" />
 	<item drawable="openvpn_connect" />
-	<item drawable="openvpn_for_android" />
 	<item drawable="openweather" />
 	<item drawable="openwort" />
 	<item drawable="opera" />
@@ -8633,7 +8636,6 @@
 	<item drawable="procam_x" />
 	<item drawable="proddy" />
 	<item drawable="producthunt" />
-	<item drawable="productivity" />
 	<item drawable="prognoza" />
 	<item drawable="programm" />
 	<item drawable="progressbar95" />
@@ -9251,7 +9253,6 @@
 	<item drawable="scoreapp_7_wonders" />
 	<item drawable="scoreboard" />
 	<item drawable="scoresquash" />
-	<item drawable="scotia_movil" />
 	<item drawable="scotiabank" />
 	<item drawable="scotland_bank" />
 	<item drawable="scotrail" />
@@ -10707,7 +10708,6 @@
 	<item drawable="uf_recposrts" />
 	<item drawable="ufanet" />
 	<item drawable="ufc" />
-	<item drawable="ufficio_postale" />
 	<item drawable="ugc" />
 	<item drawable="ujjivan" />
 	<item drawable="ukg" />
@@ -11148,7 +11148,6 @@
 	<item drawable="webnovel" />
 	<item drawable="webopac" />
 	<item drawable="website_monitor" />
-	<item drawable="webtoon" />
 	<item drawable="webull" />
 	<item drawable="weeabooify" />
 	<item drawable="weebly" />
