--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -125,6 +125,7 @@
 	<item drawable="zattoo" />
 	<item drawable="zimly" />
 	<item drawable="zomato_restaurant_partner" />
+	<item drawable="yetcalc" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -1488,6 +1489,7 @@
 	<item drawable="yandex_start_alt_1" />
 	<item drawable="yandex_translate_alt_1" />
 	<item drawable="yatse_alt_1" />
+	<item drawable="yetcalc_alt_1" />
 	<item drawable="you_com_alt_1" />
 	<item drawable="youtube_alt_1" />
 	<item drawable="youtube_gaming_alt_1" />
