Some more fixes

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -15227,6 +15227,7 @@
 	<item component="ComponentInfo{se.postnord.private/com.postnord.MaCMainActivity}" drawable="postnord" />
 	<item component="ComponentInfo{se.santanderconsumer.mobilebank/com.netbankmobile.}" drawable="santander" />
 	<item component="ComponentInfo{se.seb.privatkund/se.seb.core.app.main.MainActivity}" drawable="seb" />
+	<item component="ComponentInfo{se.seb.ungdom/se.seb.core.app.main.SplashActivity}" drawable="seb" />
 	<item component="ComponentInfo{se.seveneleven.android.smartphone/com.app.SplashScreenActivity}" drawable="_7_eleven" />
 	<item component="ComponentInfo{se.sj.android/se.sj.android.activity.SjNavigationDrawer}" drawable="sj_trains" />
 	<item component="ComponentInfo{se.skanetrafiken.washington/se.skanetrafiken.washington.StartActivity}" drawable="skanetrafiken" />
