--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -4,6 +4,7 @@
 	<!--Please avoid automatically sorting categories to keep the current order in place-->
 
 	<category title="New" />
+	<item drawable="right_gallery" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -782,6 +783,7 @@
 	<item drawable="retro_music_player_alt_1" />
 	<item drawable="revanced_manager_alt_1" />
 	<item drawable="revue_starlight_re_live_alt_1" />
+	<item drawable="right_gallery_alt_1" />
 	<item drawable="rimusic_alt_1" />
 	<item drawable="rimusic_alt_2" />
 	<item drawable="robinhood_alt_1" />
