--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -12977,7 +12977,7 @@
 	<item component="ComponentInfo{jp.pokemon.pokemoncafemix/com.geniussonority.app.TartNativeActivity}" drawable="pokemon_cafe" />
 	<item component="ComponentInfo{jp.pokemon.pokemonhome/com.unity3d.player.UnityPlayerActivity}" drawable="pokemon_home" />
 	<item component="ComponentInfo{jp.pokemon.pokemonsleep/jp.pokemon.pokemonsleep.commonutility.UnityPlayerActivity}" drawable="pokemon_sleep" />
-	<item component="ComponentInfo{jp.pokemon.pokemontcgp/com.unity3d.player.UnityPlayerActivity}" drawable="pokemon_tgc_pocket" />
+	<item component="ComponentInfo{jp.pokemon.pokemontcgp/com.unity3d.player.UnityPlayerActivity}" drawable="pokemon_tcg_pocket" />
 	<item component="ComponentInfo{jp.pokemon.pokemonunite/com.nishiki.pgame.n.PGameActivity}" drawable="pokemon_unite" />
 	<item component="ComponentInfo{jp.pokemon.pokemonunite/com.nishiki.pgame.n.PGameLauncherActivity}" drawable="pokemon_unite" />
 	<item component="ComponentInfo{jp.pokemon.poketoru/com.havok.Vision.NativeLibLoader}" drawable="pokemon_shuffle" />
